# actix-rust-boilerplate

./: Cargo.toml  readme.md  test.db
migrations/2022-02-16-071348_create_users/: up.sql
src/: database.rs  main.rs
src/controllers/: user.rs  welcome.rs
src/database/: models.rs  schema.rs  user_model.rs
src/routes/: user.rs
src/services/: user.rs
src/types/: global.rs  user.rs  welcome.rs
