[package]
name = "actix-web"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
serde = "1.0.145"
serde_json = "1.0.85"
serde_derive = "1.0.145"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.1"
log = "0.4.17"
chrono = "0.4.22"
uuid = {version = "1.1.2", features = ["serde", "v4"]}
